# smartplus

./: .gitignore  CMakeLists.txt  CMakeLists_Windows.txt  Dockerfile  Install.sh  README.md  configuration.hpp.in  install-smartplus.sh
data/: path.txt  path_inc.txt  plot-simple.py  results_job.txt
doc/: Makefile  make.bat
doc/source/: examples.rst
doc/source/Libraries/Continuum_Mechanics/: constitutive.rst  index.rst  recovery_props.rst
docker/: Dockerfile
exec/: path.txt
include/smartplus/: parameter.hpp
include/smartplus/Libraries/Abaqus/: materials.hpp  section_characteristics.hpp  steps.hpp  write.hpp
include/smartplus/Libraries/Continuum_Mechanics/: constitutive.hpp  contimech.hpp  criteria.hpp  damage.hpp  func_N.hpp  kinematics.hpp  read.hpp  recovery_props.hpp
include/smartplus/Libraries/Geometry/: cylinder.hpp  ellipsoid.hpp  geometry.hpp  layer.hpp
include/smartplus/Libraries/Homogenization/: coated_ellipsoid_characteristics.hpp.temp.hpp  cylinder_multi.hpp  ellipsoid_characteristics.hpp  ellipsoid_multi.hpp  eshelby.hpp  general_characteristics.hpp  layer_characteristics.hpp  layer_multi.hpp  phase_characteristics.hpp  phase_multi.hpp  state_variables.hpp
include/smartplus/Libraries/Identification/: constants.hpp  doe.hpp  generation.hpp  identification.hpp  individual.hpp  methods.hpp  opti_data.hpp  optimize.hpp  parameters.hpp  read.hpp  script.hpp
include/smartplus/Libraries/Material/: ODF.hpp  ODF2Nphases.hpp  PDF.hpp  PDF2Nphases.cpp  crystallo.hpp  peak.hpp  read.hpp  variant.hpp
include/smartplus/Libraries/Maths/: lagrange.hpp  num_solve.hpp  random.hpp  rotation.hpp  solve.hpp  stats.hpp
include/smartplus/Libraries/Phase/: isv.hpp  material_characteristics.hpp  output.hpp  phase_characteristics.hpp  read.hpp  state_variables.hpp  state_variables_M.hpp  state_variables_T.hpp  write.hpp
include/smartplus/Libraries/Solver/: block.hpp  output.hpp  read.hpp  solver.hpp  step.hpp  step_meca.hpp  step_thermomeca.hpp
include/smartplus/Micromechanics/: multiphase.hpp  schemes.hpp
include/smartplus/Micromechanics/Mori_Tanaka/: Mori_Tanaka.hpp
include/smartplus/Micromechanics/Periodic_Layer/: Periodic_Layer.hpp
include/smartplus/Micromechanics/Self_Consistent/: Self_Consistent.hpp
include/smartplus/Umat/: umat_L_elastic.hpp  umat_smart.hpp
include/smartplus/Umat/Mechanical/Damage/: damage_LLD_0.hpp
include/smartplus/Umat/Mechanical/Elasticity/: elastic_isotropic.hpp  elastic_orthotropic.hpp  elastic_transverse_isotropic.hpp
include/smartplus/Umat/Mechanical/Plasticity/: plastic_isotropic_ccp.hpp  plastic_kin_iso_ccp.hpp
include/smartplus/Umat/Mechanical/SMA/: unified_T.hpp
include/smartplus/Umat/Mechanical/Viscoelasticity/: Zener_fast.hpp
include/smartplus/Umat/Thermomechanical/Elasticity/: elastic_isotropic.hpp  elastic_orthotropic.hpp  elastic_transverse_isotropic.hpp
include/smartplus/Umat/Thermomechanical/Plasticity/: plastic_isotropic_ccp.hpp  plastic_kin_iso_ccp.hpp
include/smartplus/Umat/Thermomechanical/SMA/: unified_T.hpp
manual/: 1_Identification.tex  clsbook.cls  packages_style_personal.tex  smartplus.tex  smartplus.toc  stylebook.sty
manual/1_Identification/: files_exp.inp  files_weights.inp
manual/style/: tcolorbox.sty
software/: Elastic_props.cpp  L_eff.cpp  Leff.cpp  ODF.cpp  PDF.cpp  identification.cpp  run_mult.cpp  solver.cpp  umat_single.cpp  umat_singleM.cpp  umat_singleT.cpp
src/Control/: solver.cpp
src/Libraries/Abaqus/: materials.cpp  section_characteristics.cpp  steps.cpp  write.cpp
src/Libraries/Continuum_Mechanics/: constitutive.cpp  contimech.cpp  criteria.cpp  damage.cpp  func_N.cpp  kinematics.cpp  read.cpp  recovery_props.cpp
src/Libraries/Geometry/: cylinder.cpp  ellipsoid.cpp  geometry.cpp  layer.cpp
src/Libraries/Homogenization/: cylinder_multi.cpp  ellipsoid_characteristics.cpp  ellipsoid_multi.cpp  eshelby.cpp  general_characteristics.cpp  layer_characteristics.cpp  layer_multi.cpp  phase_characteristics.cpp  phase_multi.cpp  state_variables.cpp
src/Libraries/Identification/: constants.cpp  doe.cpp  generation.cpp  identification.cpp  individual.cpp  methods.cpp  opti_data.cpp  optimize.cpp  parameters.cpp  read.cpp  script.cpp
src/Libraries/Material/: ODF.cpp  ODF2Nphases.cpp  PDF.cpp  PDF2Nphases.capp  crystallo.cpp  peak.cpp  read.cpp  variant.cpp
src/Libraries/Maths/: lagrange.cpp  num_solve.cpp  random.cpp  rotation.cpp  solve.cpp  stats.cpp
src/Libraries/Phase/: material_characteristics.cpp  output.cpp  phase_characteristics.cpp  read.cpp  state_variables.cpp  state_variables_M.cpp  state_variables_T.cpp  write.cpp
src/Libraries/Solver/: block.cpp  output.cpp  read.cpp  solver.cpp  step.cpp  step_meca.cpp  step_thermomeca.cpp
src/Micromechanics/: multiphase.cpp  schemes.cpp
src/Micromechanics/Mori_Tanaka/: Mori_Tanaka.cpp
src/Micromechanics/Periodic_Layer/: Periodic_Layer.cpp
src/Micromechanics/Self_Consistent/: Self_Consistent.cpp
src/Umat/: umat_L_elastic.cpp  umat_smart.cpp
src/Umat/Mechanical/Damage/: damage_LLD_0.cpp
src/Umat/Mechanical/Elasticity/: elastic_isotropic.cpp  elastic_orthotropic.cpp  elastic_transverse_isotropic .cpp  elastic_transverse_isotropic.cpp
src/Umat/Mechanical/Plasticity/: plastic_isotropic_ccp.cpp  plastic_kin_iso_ccp.cpp
src/Umat/Mechanical/SMA/: unified_T.cpp
src/Umat/Thermomechanical/Elasticity/: elastic_isotropic.cpp  elastic_orthotropic.cpp  elastic_transverse_isotropic.cpp
src/Umat/Thermomechanical/Plasticity/: plastic_isotropic_ccp.cpp  plastic_kin_iso_ccp.cpp
src/Umat/Thermomechanical/SMA/: unified_T.cpp
test/Libraries/Abaqus/: Tmaterials.cpp  Tsteps.cpp
test/Libraries/Continuum_Mechanics/: Tconstitutive.cpp  Tcontimech.cpp  Tcriteria.cpp  Tdamage.cpp  Trecovery_props.cpp
test/Libraries/Homogenization/: Teshelby.cpp
test/Libraries/Maths/: Trotation.cpp
test/Libraries/Phase/: Tphase_characteristics.cpp
